--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,34 @@
 #container {
   text-align: center;
+  height: 250px;
+  width: 250px;
+  margin-right: 50px;
+  display: flex;
+  align-items: center;
+  align-content: center
+}
 
+div #container {
+  text-align: center;
+}
+
+#img {
+position: absolute;
+top: 4%;
+right: 50%;
+left: 25%;
+}
+
+.inputs {
   position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+  top: 40%;
+  padding: 10px;
+  width: 100%;
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
-}
-
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
-}
-
-#container a {
-  text-decoration: none;
+.buttons {
+  position: absolute;
+  top: 75%;
+  padding: 10px;
+  width: 100%;
 }
